--- a/frontend/react/package.json
+++ b/frontend/react/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "tsc && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -14,8 +14,14 @@
     "@emotion/styled": "latest",
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
+    "@xterm/xterm": "^5.5.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router": "^7.1.1",
+    "react-router-dom": "^7.1.1",
+    "react-xtermjs": "^1.0.9",
+    "socket.io-client": "^4.8.1",
+    "uuid": "^11.0.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
