--- a/frontend/react/package.json
+++ b/frontend/react/package.json
@@ -14,7 +14,9 @@
     "@emotion/styled": "latest",
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
+    "@tanstack/react-query": "^5.63.0",
     "@xterm/xterm": "^5.5.0",
+    "axios": "^1.7.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router": "^7.1.1",
